# ModernBERT

./: README.md  pyproject.toml  sbatch.sh
src/: convert_dataset.py
src/bert_layers/: embeddings.py  layers.py  model.py
yamls/main/: modernbert-base.yaml  mosaic-bert-base-uncased.yaml
