[project]
name = "modernbert"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
dependencies = [
    "einops==0.8.0",
    "torch==2.3.0",
    "mosaicml[nlp,wandb]>=0.22.0, <0.23",
    "omegaconf==2.3.0",
    "transformers==4.40.2",
    "triton==2.3.0",
    "mosaicml-streaming>=0.10.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/modernbert"]
