[project]
name = "modernbert"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
dependencies = [
    "einops==0.8.0",
    "mosaicml[nlp,wandb]==0.24.1",
    "omegaconf==2.3.0",
    "transformers==4.40.2",
    "triton==2.3.0",
    "mosaicml-streaming==0.8.0",
    "numba>=0.60.0",
    "datasets==2.21.0",
    "mosaicml-cli==0.6.41",
    "ninja==1.11.1.1",
    "ruamel-yaml==0.18.6",
    "ruamel-yaml-clib==0.2.8",
    "torch-optimi==0.2.1",
    "zstd==1.5.5.1",
    "torch>=2.3.0",
    "flash-attn>=2.7.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/modernbert"]
